# gancio_telegram_bot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
gancio_telegram_bot/: __main__.py  config.py
gancio_telegram_bot/callbacks/: __init__.py  page_turn.py
gancio_telegram_bot/handlers/: __init__.py  help.py  show_calendar.py
gancio_telegram_bot/utils/: utils.py
gancio_telegram_bot/viz/: plots.py
src/: bot.py
src/utils/: utils.py
src/viz/: plots.py
